--- a/notebooks/karl_supervised.ipynb
+++ b/notebooks/karl_supervised.ipynb
@@ -244,6 +244,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sktime in /home/operation/.local/lib/python3.10/site-packages (0.18.0)\n",
+      "Requirement already satisfied: numpy<1.25,>=1.21.0 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (1.23.5)\n",
+      "Requirement already satisfied: pandas<2.0.0,>=1.1.0 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (1.5.3)\n",
+      "Requirement already satisfied: scipy<2.0.0,>=1.2.0 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (1.10.1)\n",
+      "Requirement already satisfied: scikit-learn<1.3.0,>=0.24.0 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (1.2.2)\n",
+      "Requirement already satisfied: deprecated>=1.2.13 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (1.2.13)\n",
+      "Requirement already satisfied: scikit-base<0.5.0 in /home/operation/.local/lib/python3.10/site-packages (from sktime) (0.4.3)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /home/operation/.local/lib/python3.10/site-packages (from deprecated>=1.2.13->sktime) (1.14.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/operation/.local/lib/python3.10/site-packages (from pandas<2.0.0,>=1.1.0->sktime) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/operation/miniconda3/envs/ds/lib/python3.10/site-packages (from pandas<2.0.0,>=1.1.0->sktime) (2023.3)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/operation/.local/lib/python3.10/site-packages (from scikit-learn<1.3.0,>=0.24.0->sktime) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /home/operation/.local/lib/python3.10/site-packages (from scikit-learn<1.3.0,>=0.24.0->sktime) (1.2.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/operation/miniconda3/envs/ds/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.1.0->sktime) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sktime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sktime.transformers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpipeline\u001b[39;00m \u001b[39mimport\u001b[39;00m Pipeline\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msktime\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransformers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseries_as_features\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcompose\u001b[39;00m \u001b[39mimport\u001b[39;00m FeatureUnion\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msktime\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransformers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseries_as_features\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msegment\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomIntervalSegmenter\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msktime\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransformers\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseries_as_features\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msummarize\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomIntervalFeatureExtractor\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sktime.transformers'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sktime.transformers.series_as_features.compose import FeatureUnion\n",
+    "from sktime.transformers.series_as_features.segment import RandomIntervalSegmenter\n",
+    "from sktime.transformers.series_as_features.summarize import RandomIntervalFeatureExtractor\n",
+    "from sktime.classification.compose import HIVECOTEV1\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_test_split' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39m../data_new/supervised-dropped/AB3 - Main 3L.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39m# Split data into training and test sets\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(df\u001b[39m.\u001b[39mdrop(\u001b[39m\"\u001b[39m\u001b[39mPhase\u001b[39m\u001b[39m\"\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m), df[\u001b[39m\"\u001b[39m\u001b[39mPhase\u001b[39m\u001b[39m\"\u001b[39m], test_size\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Define preprocessing pipeline\u001b[39;00m\n\u001b[1;32m      8\u001b[0m preprocess \u001b[39m=\u001b[39m Pipeline([\n\u001b[1;32m      9\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39msegment\u001b[39m\u001b[39m\"\u001b[39m, RandomIntervalSegmenter(n_intervals\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msqrt\u001b[39m\u001b[39m\"\u001b[39m)),\n\u001b[1;32m     10\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39mtransform\u001b[39m\u001b[39m\"\u001b[39m, FeatureUnion([\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m     ]))\n\u001b[1;32m     17\u001b[0m ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_test_split' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "df = pd.read_csv(\"../data_new/supervised-dropped/AB3 - Main 3L.csv\")\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df.drop(\"Phase\", axis=1), df[\"Phase\"], test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define preprocessing pipeline\n",
+    "preprocess = Pipeline([\n",
+    "    (\"segment\", RandomIntervalSegmenter(n_intervals=\"sqrt\")),\n",
+    "    (\"transform\", FeatureUnion([\n",
+    "        (\"mean\", RandomIntervalFeatureExtractor(feature=\"mean\")),\n",
+    "        (\"std\", RandomIntervalFeatureExtractor(feature=\"std\")),\n",
+    "        (\"min\", RandomIntervalFeatureExtractor(feature=\"min\")),\n",
+    "        (\"max\", RandomIntervalFeatureExtractor(feature=\"max\")),\n",
+    "        (\"fft\", RandomIntervalFeatureExtractor(feature=\"fft\", n_components=10))\n",
+    "    ]))\n",
+    "])\n",
+    "\n",
+    "# Define HIVE-COTE ensemble\n",
+    "ensemble = HIVECOTEV1(\n",
+    "    estimators=[\n",
+    "        (\"transformed_features\", preprocess),\n",
+    "        (\"shallow_forest\", \"shallow-forest\", {\"n_estimators\": 200}),\n",
+    "        (\"k_neighbors\", \"k-nn\", {\"n_neighbors\": 1}),\n",
+    "        (\"random_subspace\", \"random-subspace\", {\"n_estimators\": 200}),\n",
+    "        (\"boss\", \"boss\", {\"max_ensemble_size\": 5, \"n_parameter_samples\": 100}),\n",
+    "        (\"st\", \"shapelet_transform\", {\"max_shapelets_to_store_per_class\": 100}),\n",
+    "        (\"rocket\", \"rocket\", {\"num_kernels\": 10000, \"max_dilations_per_kernel\": 8})\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Train HIVE-COTE ensemble separately for each category of \"Measure\"\n",
+    "models = {}\n",
+    "for measure in df[\"Measure\"].unique():\n",
+    "    X_train_measure = X_train[X_train[\"Measure\"] == measure]\n",
+    "    y_train_measure = y_train[X_train[\"Measure\"] == measure]\n",
+    "    model = Pipeline([\n",
+    "        (\"preprocess\", preprocess),\n",
+    "        (\"ensemble\", ensemble)\n",
+    "    ])\n",
+    "    model.fit(X_train_measure.drop(\"Measure\", axis=1), y_train_measure)\n",
+    "    models[measure] = model\n",
+    "\n",
+    "# Make predictions on test data\n",
+    "y_pred = []\n",
+    "for i, row in X_test.iterrows():\n",
+    "    measure = row[\"Measure\"]\n",
+    "    model = models[measure]\n",
+    "    y_pred.append(model.predict([row.drop(\"Measure\")])[0])\n",
+    "\n",
+    "# Evaluate performance\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -252,7 +382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ds",
    "language": "python",
    "name": "python3"
   },
@@ -266,12 +396,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "e2452a24994f45300bfc17642e7a3cbaee7ec1bbf9e6ae0087a7c4fe13206dc8"
    }
   }
  },
