--- a/notebooks/semi-supervised.ipynb
+++ b/notebooks/semi-supervised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +58,21 @@
      "output_type": "stream",
      "text": [
       "Training on: AB3 - Main 3L\n",
-      "Training accuracy: 0.8558558558558559\n",
-      "Training accuracy: 0.9052369077306733\n",
-      "Training accuracy: 0.9262851600387972\n"
+      "Training accuracy: 0.8538926413082119\n",
+      "Training accuracy: 0.9097034053460271\n",
+      "Training accuracy: 0.9315912117177098\n",
+      "Training accuracy: 0.9449528996830215\n",
+      "Training on: Sub - Feeder F02\n",
+      "Training accuracy: 0.7958904109589041\n",
+      "Training accuracy: 0.8620609847827345\n",
+      "Training accuracy: 0.8914439233186102\n",
+      "Training accuracy: 0.9105138695994895\n",
+      "Training accuracy: 0.9239140841923851\n",
+      "Training on: BS4 - Main 4R\n",
+      "Training accuracy: 0.8277861069465268\n",
+      "Training accuracy: 0.8894875248540824\n",
+      "Training accuracy: 0.9134953308565117\n",
+      "Training accuracy: 0.9292460578186597\n"
      ]
     }
    ],
@@ -68,7 +80,7 @@
     "# Train a logistic regression classifier on the labeled data\n",
     "# clf = LogisticRegression(random_state=42)\n",
     "\n",
-    "for j in range (1):\n",
+    "for j in range (3):\n",
     "    print(f\"Training on: {files[j]}\")\n",
     "    df = pd.read_csv(path+files[j]+'.csv')\n",
     "    \n",
@@ -87,8 +99,8 @@
     "    \n",
     "    # Select the most confident predictions and add them to the labeled data\n",
     "    max_confidence = np.max(model.predict_proba(unlabeled_df[['kWh']]), axis=1) # max_confidence = np.max(clf.predict_proba(unlabeled_df[['kWh']]), axis=1)\n",
-    "    new_labeled_df = unlabeled_df[max_confidence > 0.9].copy()\n",
-    "    new_labeled_df['label'] = unlabeled_preds[max_confidence > 0.9]\n",
+    "    new_labeled_df = unlabeled_df[max_confidence > 0.85].copy()\n",
+    "    new_labeled_df['label'] = unlabeled_preds[max_confidence > 0.85]\n",
     "    prev_labeled_df = new_labeled_df.copy()\n",
     "\n",
     "    for i in range(10):\n",
@@ -108,8 +120,8 @@
     "    \n",
     "        # Select the most confident predictions and add them to the labeled data\n",
     "        max_confidence = np.max(model.predict_proba(unlabeled_df[['kWh']]), axis=1) # max_confidence = np.max(clf.predict_proba(unlabeled_df[['kWh']]), axis=1)\n",
-    "        new_labeled_df = unlabeled_df[max_confidence > 0.97].copy()\n",
-    "        new_labeled_df['label'] = unlabeled_preds[max_confidence > 0.97]\n",
+    "        new_labeled_df = unlabeled_df[max_confidence > 0.95].copy()\n",
+    "        new_labeled_df['label'] = unlabeled_preds[max_confidence > 0.95]\n",
     "    \n",
     "        # Check for convergence by comparing the new labeled data to the previous iteration\n",
     "        if new_labeled_df.equals(prev_labeled_df):\n",
@@ -119,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.4945210321668434\n"
+      "Test accuracy: 0.7374316457929088\n"
      ]
     }
    ],
@@ -155,13 +167,6 @@
     "# Use the classifier to predict labels for the test data\n",
     "# plot_eval(test_df, y_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
