added automated evaluation

--- a/automated-evaluation.ipynb
+++ b/automated-evaluation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,26 +18,170 @@
     "import pickle\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# settings\n",
-    "input_file_path = 'data_new/test_data_solution/test_with_labels_Body_AHU.csv'"
+    "file_path = 'data_new/test_data/evaluated_test_Sub - Feeder F08.csv'\n",
+    "solution_path = 'data_new/test_data_solution/test_with_labels_Sub - Feeder F08.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2418, 4)\n",
+      "(2418, 4)\n",
+      "(3656, 4)\n",
+      "(4797, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in os.listdir('data_new/code-0-kmeans/'):\n",
+    "    print(pd.read_csv('data_new/code-0-kmeans/' + file).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team iamai\n",
+      "1-IAMAI_Body_AHU.csv Score: 0.8601190476190477\n",
+      "2-IAMAI_BS1.csv Score: 0.8980392156862745\n",
+      "3-IAMAI_Feeder_F06.csv Score: 0.6264880952380952\n",
+      "4-IAMAI_Feeder_F08.csv Score: 0.8768601190476191\n",
+      "Team code-0-rfc\n",
+      "1-evaluated_test_Body_AHU.csv Score: 0.8257068452380952\n",
+      "2-evaluated_test_BS1 - Main 1R.csv Score: 0.8723039215686275\n",
+      "3-evaluated_test_Sub - Feeder F06.csv Score: 0.8541666666666666\n",
+      "4-evaluated_test_Sub - Feeder F08.csv Score: 0.8656994047619048\n"
+     ]
+    }
+   ],
+   "source": [
+    "le = LabelEncoder()\n",
+    "\n",
+    "for team in os.listdir('data_new/submissions/'):\n",
+    "    print(f\"Team {team}\")\n",
+    "    team_submission_paths = os.listdir('data_new/submissions/' + team)\n",
+    "    team_submission_paths = sorted(team_submission_paths)\n",
+    "    solution_paths = os.listdir('data_new/test_data_solution/')\n",
+    "    solution_paths = sorted(solution_paths)\n",
+    "    for entry_path, solution_path in zip(team_submission_paths, solution_paths):\n",
+    "        #print('data_new/submissions/' + team + '/' + entry_path)\n",
+    "        #print('data_new/test_data_solution/' + solution_path)\n",
+    "        entry = pd.read_csv('data_new/submissions/' + team + '/' + entry_path)['label']\n",
+    "        solution = pd.read_csv('data_new/test_data_solution/' + solution_path)['label']\n",
+    "        if isinstance(entry[0], str):\n",
+    "            # encode solution\n",
+    "            entry = le.fit_transform(entry)\n",
+    "        solution = le.fit_transform(solution)\n",
+    "        # Calculate the accuracy of the model on the new data\n",
+    "        accuracy = accuracy_score(solution, entry)\n",
+    "        print(f\"{entry_path} Score: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test_with_labels_Sub - Feeder F06.csv',\n",
+       " 'test_with_labels_BS1 - Main 1R.csv',\n",
+       " 'test_with_labels_Body_AHU.csv',\n",
+       " 'test_with_labels_Sub - Feeder F08.csv']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution_paths = os.listdir('data_new/test_data_solution/')\n",
+    "team_submission_paths = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(input_file_path)"
+    "files = []\n",
+    "for file in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(file_path)\n",
+    "df_solution = pd.read_csv(solution_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on new data: 0.8656994047619048\n",
+      "Labels:    [0 0 0 ... 0 0 0]\n",
+      "Predicted: 0       0\n",
+      "1       0\n",
+      "2       0\n",
+      "3       0\n",
+      "4       0\n",
+      "       ..\n",
+      "2683    0\n",
+      "2684    0\n",
+      "2685    0\n",
+      "2686    0\n",
+      "2687    0\n",
+      "Name: label, Length: 2688, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_pred = df['label']\n",
+    "y = pd.read_csv(solution_path)['label']\n",
+    "\n",
+    "# encode y\n",
+    "le = LabelEncoder()\n",
+    "y_encoded = le.fit_transform(y)\n",
+    "\n",
+    "# Calculate the accuracy of the model on the new data\n",
+    "new_accuracy = accuracy_score(y_encoded, new_pred)\n",
+    "print(\"Accuracy on new data:\", new_accuracy)\n",
+    "print(f\"Labels:    {y_encoded}\")\n",
+    "print(f\"Predicted: {new_pred}\")"
    ]
   },
   {
